// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResultWrapper rendering should not render empty panoUrl 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        subTitle
      </h2>
    </div>
  </header>
  <div>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
  </div>
</section>
`;

exports[`MapDetailResultWrapper rendering should not render empty sub title 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
  <div>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
  </div>
</section>
`;

exports[`MapDetailResultWrapper rendering should not render missing children 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
</section>
`;

exports[`MapDetailResultWrapper rendering should not render missing sub title 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
    </div>
  </header>
  <div>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
  </div>
</section>
`;

exports[`MapDetailResultWrapper rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        title
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        subTitle
      </h2>
    </div>
  </header>
  <div>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
    </ul>
  </div>
</section>
`;
